--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
   </head>
   <body>
     <div>
-      <input type="text" class="petNameField" placeholder="Enter pet's name" />
+      <input type="text" id="petNameField" placeholder="Enter pet's name" />
     </div>
     <div>
-      <input type="text" class="ownerNameField" placeholder="Enter owner's name" />
+      <input type="text" id="ownerNameField" placeholder="Enter owner's name" />
     </div>
     <div>
-      <input type="text" class="petSpeciesField" placeholder="Enter pet's species" />
+      <input type="text" id="petSpeciesField" placeholder="Enter pet's species" />
     </div>
     <div>
-      <input type="text" class="petBreedField" placeholder="Enter pet's breed" />
+      <input type="text" id="petBreedField" placeholder="Enter pet's breed" />
     </div>
-    <button>Enter</button>
-    <ul class="petList"></ul>
+    <button id="button">Enter</button>
+    <ul id="petList"></ul>
     <script src="./exercise2.js"></script>
   </body>
 </html>
